CONTACTS P2 Finish with body objects for post and put
